--- a/WebAdmin/public/EditarLocais.html
+++ b/WebAdmin/public/EditarLocais.html
@@ -45,13 +45,13 @@
 
 <div class="form-group">
     <label for="exampleFormControlSelect1">Nome Local: </label>
-    <input type="text" class="form-control" id="exampleFormControlSelect1" required/>
+    <input id="txtLocalName" value="oi" type="text" class="form-control" id="exampleFormControlSelect1" required/>
     </select>
   </div>
 
 <div class="form-group">
     <label for="exampleFormControlSelect1">Andar Selecionado:</label>
-    <select class="form-control" id="exampleFormControlSelect1">
+    <select id="txtLocalFloor" class="form-control" id="exampleFormControlSelect1">
       <option>1</option>
       <option>2</option>
       <option>3</option>
@@ -59,7 +59,7 @@
     </select>
   </div>
 
-<br>
+<br>.
 
 <div class="btn-group btn-group-toggle" data-toggle="buttons">
   <label class="btn btn-primary active">
@@ -88,108 +88,114 @@
       <div class="form-group row">
         <label for="exampleFormControlSelect1" id="ajuste6" class="col-2 col-form-label">Segunda de:</label>
         <div class="col-10">
-          <input class="form-control" type="time" value="10:00:00" id="ajuste5">
+          <input id="startSeg" class="form-control" type="time" id="ajuste5">
         </div>
       </div>
 
       <div class="form-group row">
         <label for="exampleFormControlSelect1" id="ajuste6" class="col-2 col-form-label">Até:</label>
         <div class="col-10">
-          <input class="form-control" type="time" value="22:45:00" id="ajuste5">
+          <input id="endSeg" class="form-control" type="time" id="ajuste5">
         </div>
       </div><br>
 
       <div class="form-group row">
         <label for="exampleFormControlSelect1" id="ajuste6" class="col-2 col-form-label">Terça de:</label>
         <div class="col-10">
-          <input class="form-control" type="time" value="10:00:00" id="ajuste5">
+          <input id="startTer" class="form-control" type="time" id="ajuste5">
         </div>
       </div>
 
       <div class="form-group row">
         <label for="exampleFormControlSelect1" id="ajuste6" class="col-2 col-form-label">Até:</label>
         <div class="col-10">
-          <input class="form-control" type="time" value="22:45:00" id="ajuste5">
+          <input id="endTer" class="form-control" type="time" id="ajuste5">
         </div>
       </div><br>
 
       <div class="form-group row">
         <label for="exampleFormControlSelect1" id="ajuste6" class="col-2 col-form-label">Quarta de:</label>
         <div class="col-10">
-          <input class="form-control" type="time" value="10:00:00" id="ajuste5">
+          <input id="startQua" class="form-control" type="time" id="ajuste5">
         </div>
       </div>
 
       <div class="form-group row">
         <label for="exampleFormControlSelect1" id="ajuste6" class="col-2 col-form-label">Até:</label>
         <div class="col-10">
-          <input class="form-control" type="time" value="22:45:00" id="ajuste5">
+          <input id="endQua" class="form-control" type="time" id="ajuste5">
         </div>
       </div><br>
 
       <div class="form-group row">
         <label for="exampleFormControlSelect1" id="ajuste6" class="col-2 col-form-label">Quinta de:</label>
         <div class="col-10">
-          <input class="form-control" type="time" value="10:00:00" id="ajuste5">
+          <input id="startQui" class="form-control" type="time" id="ajuste5">
         </div>
       </div>
 
       <div class="form-group row">
         <label for="exampleFormControlSelect1" id="ajuste6" class="col-2 col-form-label">Até:</label>
         <div class="col-10">
-          <input class="form-control" type="time" value="22:45:00" id="ajuste5">
+          <input id="endQui"  class="form-control" type="time" id="ajuste5">
         </div>
       </div><br>
 
       <div class="form-group row">
         <label for="exampleFormControlSelect1" id="ajuste6" class="col-2 col-form-label">Sexta de:</label>
         <div class="col-10">
-          <input class="form-control" type="time" value="10:00:00" id="ajuste5">
+          <input id="startSex" class="form-control" type="time" id="ajuste5">
         </div>
       </div>
 
       <div class="form-group row">
         <label for="exampleFormControlSelect1" id="ajuste6" class="col-2 col-form-label">Até:</label>
         <div class="col-10">
-          <input class="form-control" type="time" value="22:45:00" id="ajuste5">
+          <input id="endSex" class="form-control" type="time" id="ajuste5">
         </div>
       </div><br>
 
       <div class="form-group row">
         <label for="exampleFormControlSelect1" id="ajuste6" class="col-2 col-form-label">Sábado de:</label>
         <div class="col-10">
-          <input class="form-control" type="time" value="10:00:00" id="ajuste5">
+          <input id="startSab" class="form-control" type="time" id="ajuste5">
         </div>
       </div>
 
       <div class="form-group row">
         <label for="exampleFormControlSelect1" id="ajuste6" class="col-2 col-form-label">Até:</label>
         <div class="col-10">
-          <input class="form-control" type="time" value="22:45:00" id="ajuste5">
+          <input id="endSab" class="form-control" type="time" id="ajuste5">
         </div>
       </div><br>
 
       <div class="form-group row">
         <label for="exampleFormControlSelect1" id="ajuste6" class="col-2 col-form-label">Domingo de:</label>
         <div class="col-10">
-          <input class="form-control" type="time" value="10:00:00" id="ajuste5">
+          <input id="startDom" class="form-control" type="time" id="ajuste5">
         </div>
       </div>
 
       <div class="form-group row">
         <label for="exampleFormControlSelect1" id="ajuste6" class="col-2 col-form-label">Até:</label>
         <div class="col-10">
-          <input class="form-control" type="time" value="17:45:00" id="ajuste5">
+          <input id="endDom" class="form-control" type="time" id="ajuste5">
         </div>
       </div><br>
   </div>
 
-  <input class="btn btn-primary" type="submit" value="Salvar Alterações" id="saidae">
+  <input id="btnUpdateLocal" class="btn btn-primary" type="submit" value="Salvar Alterações" id="saidae">
 
 </div>
 
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
+<script src="../src/Scripts/editLocal.js"></script>
+<script src="../src/Controllers/LocalController.js"></script>
+<script src="../src/Models/Local.js"></script>
+<script src="../src/Models/OpeningHours.js"></script>
+<script src="../src/Services/ApiConfig.js"></script>
+<script src="../src/Services/ApiConnection.js"></script>
 
 </body>
 </html>
