--- a/WebAdmin/public/Locais.html
+++ b/WebAdmin/public/Locais.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html>.
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -46,59 +46,28 @@
 
 
 <form class="form-inline my-2 my-lg-0" id="saidae5">
-      <input class="form-control mr-sm-2" id="barra" type="search" placeholder="Search" aria-label="Search">
-      <button type="button" id="btnResponsa" class="btn btn-primary">Pesquisar</button>
+      <input id="txtSearch" class="form-control mr-sm-2" id="barra" type="search" placeholder="Pesquise por locais" aria-label="Search">
+      <strong><input type="checkbox" id="btnByType" checked style="color: white;"> Fitrar por tipo</input></strong>
+      <div class="form-group" id="ajuste2">
+        <select id="cmbLocalType" class="form-control my-2 my-lg-0" id="ajuste3">
+       </select>
+    </div>
     </form>
 
-<div class="list-group" id="saidae5">
-  <div class="list-group-item list-group-item-action">
-    <div class="d-flex w-100 justify-content-between">
-      <h5 class="mb-1">Netshoes</h5>
-    </div>
-    <p class="mb-1">Vinculado à: Box 81194</p>
-    <small>Local ativo</small>
-    <div class="icone"><a href="EditarLocais.html"><i class="fas fa-cog fa-2x"></i></a></div>
-  </div>
-  <div class="list-group-item list-group-item-action">
-    <div class="d-flex w-100 justify-content-between">
-      <h5 class="mb-1">McDonalds</h5>
-    </div>
-    <p class="mb-1">Vinculado à: Box 22194</p>
-    <small class="text-muted">Local desativo</small>
-      <div class="icone"><a href="EditarLocais.html"><i class="fas fa-cog fa-2x"></i></a></div>
-  </div>
-   <div class="list-group-item list-group-item-action">
-    <div class="d-flex w-100 justify-content-between">
-      <h5 class="mb-1">Subway</h5>
-    </div>
-    <p class="mb-1">Vinculado à: Box 69194</p>
-    <small class="text-muted">Local desativo</small>
-      <div class="icone"><a href="EditarLocais.html"><i class="fas fa-cog fa-2x"></i></a></div>
-  </div>
-   <div class="list-group-item list-group-item-action">
-    <div class="d-flex w-100 justify-content-between">
-      <h5 class="mb-1">Saraiva</h5>
-    </div>
-    <p class="mb-1">Vinculado à: Box 51194</p>
-    <small class="text-muted">Local desativo</small>
-      <div class="icone"><a href="EditarLocais.html"><i class="fas fa-cog fa-2x"></i></a></div>
-  </div>
-  <div class="list-group-item list-group-item-action">
-    <div class="d-flex w-100 justify-content-between">
-      <h5 class="mb-1">Americanas</h5>
-    </div>
-    <p class="mb-1">Vinculado à: Box 63194</p>
-    <small class="text-muted">Local ativo</small>
-    <div class="icone"><a href="EditarLocais.html"><i class="fas fa-cog fa-2x"></i></a></div>
-  </div>
-  </div>
+<div id="locals" class="list-group" id="saidae5">
 </div>
-
 
 
 
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
+<script src="../src/Scripts/localType.js"></script>
+<script src="../src/Scripts/fetchLocals.js"></script>
+<script src="../src/Controllers/LocalController.js"></script>
+<script src="../src/Controllers/LocalTypeController.js"></script>
+<script src="../src/Services/ApiConfig.js"></script>
+<script src="../src/Services/ApiConnection.js"></script>
+
 
 </body>
 </html>
